# llm-safety-framework

./: .env.example  .gitignore  ARCHITECTURE_PLAN.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: api_keys.json
data/: historical_precedent_attacks.json  sample_test_prompts.json
docs/: IMPORTING_GUIDE.md
examples/: sample_attack_module.py  sample_conversations.json
llm-safety-framework-public/: .dockerignore  .env.template  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
llm-safety-framework-public/data/graded_responses/: example_graded_responses.json
llm-safety-framework-public/docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DIAGRAMS.md  TEST_GENERATION.md
llm-safety-framework-public/scripts/: import_database.py  showcase.py  start_chat_viewer.py  start_prompt_viewer.py
llm-safety-framework-public/src/: __init__.py
llm-safety-framework-public/src/attacks/: base.py
llm-safety-framework-public/src/attacks/builtin/: __init__.py  authority.py  cognitive.py  emotional.py
llm-safety-framework-public/src/core/: __init__.py  api_specification.py  base_agent.py
llm-safety-framework-public/src/evaluation/: __init__.py  llm_judge.py
llm-safety-framework-public/src/generators/: __init__.py  coercion_manipulation_generator.py  mega_variation_generator.py
llm-safety-framework-public/src/harnesses/: harness_boundary.py  harness_monitoring.py  run_autonomous_harness.py
llm-safety-framework-public/src/monitoring/: __init__.py  continuous_testing_monitor.py  monitoring_dashboard.py  unified_web_dashboard.py
llm-safety-framework-public/src/orchestration/: filewrapper.py  orchestrator.py  orchestrator_master.py  wrapper.py  wrapper_watchdog.py
llm-safety-framework-public/src/research/: news_monitor.py
llm-safety-framework-public/src/web/: app.py  config.py  routes.py
llm-safety-framework-public/src/web/static/: index.html
llm-safety-framework-public/tests/: conftest.py  test_api_models.py  test_base_agent.py  test_integration.py
scripts/: chat_viewer.html  demo.py  generate_tests.py  reassemble_templates.py  start_long_run.py  start_research.py  start_server.py
src/: api.py  cli.py
src/attacks/: __init__.py  registry.py
src/attacks/builtin/: contextual.py  (+2 more)
src/core/: __init__.py  api_specification.py
src/evaluation/: __init__.py  pattern_evaluator.py
src/generators/: __init__.py  financial_obfuscation_generator.py  historical_precedent_generator.py  moral_religious_framing_generator.py  regulatory_evasion_generator.py
src/harnesses/: __init__.py  harness_analysis.py  harness_test_generation.py  harness_visualization.py  run_claude_harness.py
src/monitoring/: monitor_14day_research.py  monitor_autonomous.py  monitor_progress.py  monitor_research.py  monitored_resource_pb2.py  monitoring_pb2.py  start_monitoring_server.py
src/orchestration/: __init__.py  autonomous_improvement_wrapper.py  continuous_improvement_orchestrator.py  enum_type_wrapper.py  error_wrappers.py  wrapper_supervisor.py  wrappers.py  wrappers_pb2.py
src/prompt_enhancement/: __init__.py  config.py  screener.py  templates.py
src/research/: __init__.py  research_agent.py
src/web/: __init__.py  app.py  routes.py
templates/: AUTONOMOUS_RESEARCH_REPORT.json  actionable_tests_20260127_185028.json  advanced_analysis_latest.json  advanced_evasion_tests_20260130_075628.json  advanced_test_variations.json  aggregates.json  attack_strategies.json  bystander_dilemma_20260118_033350.json  checkpoint.json  claude_cli_generated_tests.json  claude_cli_tests_expanded.json  consolidation_summary.json  constitutional_principles.json  conversations_summary.json  corporate_complicity.json  data_export.json  dataset_metadata.json  debug_notes_20260118_151230.json  digital_exploitation.json  download_status.json  emerging_patterns.json  enhanced_results_20260127_193625.json  enhanced_results_20260127_204344.json  enhanced_results_20260127_213053.json  enhanced_results_20260127_213105.json  enhanced_results_20260128_082325.json  eval_results_20260118_053808.json  eval_results_20260118_062034.json  eval_results_20260118_125143.json  eval_summary_20260118_053808.json  eval_summary_20260118_062034.json  eval_summary_20260118_125143.json  evaluation_mistral-large-latest_20260117_234816.json  evaluation_mistral-large-latest_20260118_005819.json  evaluation_summary_20260118_151230.json  executive_report_latest.json  exploiter_framed_20260118_033350.json  extracted_facts_20260118_030247.json  f4b8adb3f41c_metadata_20260121_115836.json  f4b8adb3f41c_metadata_20260121_115903.json  (+1344 more)
templates/chunks/: README.md  all_tests_consolidated_20260129_211032_part003.json  template_massive_complete_20260129_082517_part012.json  template_massive_complete_20260129_083101_part022.json
tests/: __init__.py  test_integration.py
trafficking_llm_benchmark/: CLAUDE.md  pyproject.toml  requirements.txt  requirements_webapp.txt
trafficking_llm_benchmark/docs/: INDEX.md
trafficking_llm_benchmark/docs/archive/improvements/: IMPROVEMENTS_2026_01_28.md  ISSUE_RESOLVED.md
trafficking_llm_benchmark/docs/archive/results/: FINAL_PROJECT_SUMMARY.md  FINAL_README.md  YOUR_RESULTS_ARE_READY.md
trafficking_llm_benchmark/docs/archive/session_logs/: 14_DAY_RESEARCH_GUIDE.md  14_DAY_RESEARCH_RUNNING.md  AUTONOMOUS_10HR_RUNNING.md  COMPLETE_PUBLISHING_CHECKLIST.md  CONFIRMED_RUNNING_NOW.md  CURRENTLY_RUNNING.md  CURRENT_STATUS.md  CURRENT_STATUS_10K_TESTS.md  CURRENT_STATUS_AND_ISSUES.md  MASSIVE_SYSTEM_RUNNING.md  READY_TO_DEPLOY.md  RESEARCH_ACTIVE_NOW.md  SESSION_2026-01-30.md  SESSION_ACCOMPLISHMENTS.md  SESSION_COMPLETE_14_DAY_LAUNCH.md  SESSION_PROGRESS_SUMMARY.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2026_01_28.md  SESSION_SUMMARY_CLAUDE_CODE.md  SYSTEM_RUNNING_NOW.md
trafficking_llm_benchmark/docs/archive/summaries/: COMPLETE_SOLUTION_SUMMARY.md  COMPLETE_SYSTEM_GUIDE.md  DELIVERABLES_SUMMARY.md  README_AUTONOMOUS.md  README_COMPLETE.md  README_COMPREHENSIVE.md  README_FINAL.md  RESEARCH_EXPANSION_COMPLETE.md
(+2 files in other folders)
