[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-safety-framework"
version = "1.0.0"
description = "A modular framework for testing LLM safety systems against adversarial prompts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Taylor Amarel" }
]
keywords = [
    "llm",
    "safety",
    "testing",
    "red-teaming",
    "adversarial",
    "benchmark",
    "ai-safety"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "aiofiles>=23.0",

    # LLM Providers
    "openai>=1.0",
    "anthropic>=0.18",
    "mistralai>=0.1",
    "together>=1.0",

    # API Server
    "fastapi>=0.109",
    "uvicorn>=0.27",

    # Data Processing
    "pandas>=2.0",
    "numpy>=1.24",

    # CLI
    "typer[all]>=0.9",
    "rich>=13.0",

    # Database
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",

    # Utilities
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",

    # Code Quality
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.6",

    # Type Stubs
    "types-pyyaml",
    "types-aiofiles",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

ml = [
    # ML/Embeddings (optional)
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "torch>=2.0",
]

all = [
    "llm-safety-framework[dev,docs,ml]",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-safety-framework"
Documentation = "https://github.com/yourusername/llm-safety-framework/docs"
Repository = "https://github.com/yourusername/llm-safety-framework"
Issues = "https://github.com/yourusername/llm-safety-framework/issues"

[project.scripts]
llm-safety = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "mistralai.*",
    "together.*",
    "anthropic.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
