[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trafficking-llm-benchmark"
version = "1.0.0"
description = "A framework for testing LLM safety against human trafficking and labor exploitation scenarios"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Taylor Amarel" }
]
keywords = [
    "llm",
    "safety",
    "testing",
    "red-teaming",
    "adversarial",
    "benchmark",
    "ai-safety",
    "human-trafficking",
    "labor-exploitation",
    "migrant-workers"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # LLM Providers
    "openai>=1.0",
    "anthropic>=0.18",
    "mistralai>=0.1",
    "together>=1.0",

    # API Server
    "fastapi>=0.109",
    "uvicorn>=0.27",

    # Database
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",

    # Data Processing
    "pandas>=2.0",
    "numpy>=1.24",

    # Document Processing
    "pdfplumber>=0.10",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",

    # Vector Store (optional but commonly used)
    "chromadb>=0.4",

    # CLI
    "typer[all]>=0.9",
    "rich>=13.0",

    # HTTP Client
    "httpx>=0.25",
    "aiofiles>=23.0",
    "tenacity>=8.2",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",

    # Code Quality
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.6",

    # Type Stubs
    "types-pyyaml",
    "types-aiofiles",
]

web = [
    # Flask (for legacy web apps)
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pymysql>=1.1.0",
    "Werkzeug>=3.0.1",

    # Streamlit dashboard
    "streamlit>=1.29.0",
    "plotly>=5.17.0",

    # Jinja templates
    "jinja2>=3.1",
]

ml = [
    # ML/Embeddings
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "torch>=2.0",
]

docs = [
    # Document processing extras
    "pytesseract>=0.3",
    "python-docx>=1.0",
]

all = [
    "trafficking-llm-benchmark[dev,web,ml,docs]",
]

[project.urls]
Homepage = "https://github.com/tayloramarel/trafficking-llm-benchmark"
Documentation = "https://github.com/tayloramarel/trafficking-llm-benchmark/docs"
Repository = "https://github.com/tayloramarel/trafficking-llm-benchmark"
Issues = "https://github.com/tayloramarel/trafficking-llm-benchmark/issues"

[project.scripts]
tlb = "src.cli:main"
trafficking-benchmark = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "mistralai.*",
    "together.*",
    "anthropic.*",
    "openai.*",
    "streamlit.*",
    "plotly.*",
    "chromadb.*",
    "pdfplumber.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "Benchmark*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "database: marks tests that require database",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
